<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/ver"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_1"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/create1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oncreate"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/start1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onstart"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/resume1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onresume"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/pause1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onpause"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/stop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onstop"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/restart1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onrestart"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/destroy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ondestroy"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/ver"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_2"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/create2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oncreate"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/start2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onstart"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/resume2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onresume"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/pause2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onpause"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/stop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onstop"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/restart2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onrestart"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/destroy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ondestroy"
            android:textSize="20sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>